5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1734_2503.log
== TEST (2019-05-09 18:23:24) 
-- CODE:
n=int(input())
contador=1
divisor=-1
while(contador <=n ):
	contador=contador+1
	divisor=divisor+2
	soma=soma+((-1)**contador)*(4 /divisor)
print(round(soma, 8))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma=soma+((-1)**contador)*(4 /divisor)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:24:03) 
-- CODE:
n=int(input())
contador=1
divisor=-1
while(contador <=n ):
	contador=contador+1
	divisor=divisor+2
	soma=soma+((-1)**contador)*(4 /divisor)
print(round(soma, 8))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma=soma+((-1)**contador)*(4 /divisor)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:25:58) 
-- CODE:
n=int(input("digite um numero natural:"))
contador=1
divisor=-1
while(contador <=n ):
	contador=contador+1
	divisor=divisor+2
	soma=soma+((-1)**contador)*(4 /divisor)
print(round(soma, 8))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma=soma+((-1)**contador)*(4 /divisor)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:26:21) 
-- CODE:
n=int(input("digite um numero natural:"))
contador=1
divisor=-1
while(contador <=n ):
	contador=contador+1
	divisor=divisor+2
	soma=((-1)**contador)*(4 /divisor)
print(round(soma, 8))
	
-- OUTPUT:
-0.01476015
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:26:27) 
-- CODE:
n=int(input("digite um numero natural:"))
contador=1
divisor=-1
while(contador <=n ):
	contador=contador+1
	divisor=divisor+2
	soma=((-1)**contador)*(4 /divisor)
print(round(soma, 8))
	
-- EXECUTION TIME:
0.210707
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
-0.01476015
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
-0.09302326
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
0.13793103
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:26:59) 
-- CODE:
n=int(input("digite um numero natural:"))
contador=1
divisor=-1
while(contador <=n ):
	contador=contador+1
	divisor=divisor+2
	soma=((-1)**contador)*(4/divisor)
print(round(soma, 8))
	
-- OUTPUT:
-0.01476015
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:27:02) 
-- CODE:
n=int(input("digite um numero natural:"))
contador=1
divisor=-1
while(contador <=n ):
	contador=contador+1
	divisor=divisor+2
	soma=((-1)**contador)*(4/divisor)
print(round(soma, 8))
	
-- EXECUTION TIME:
0.120622
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
-0.01476015
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
-0.09302326
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
0.13793103
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:27:09) 
-- CODE:
n=int(input("digite um numero natural:"))
contador=1
divisor=-1
while(contador <=n ):
	contador=contador+1
	divisor=divisor+2
	soma=soma+((-1)**contador)*(4/divisor)
print(round(soma, 8))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma=soma+((-1)**contador)*(4/divisor)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:27:40) 
-- CODE:
n=int(input("digite um numero natural:"))
contador=1
divisor=-1
soma=0
while(contador <=n ):
	contador=contador+1
	divisor=divisor+2
	soma=soma+((-1)**contador)*(4/divisor)
print(round(soma, 8))
	
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:27:43) 
-- CODE:
n=int(input("digite um numero natural:"))
contador=1
divisor=-1
soma=0
while(contador <=n ):
	contador=contador+1
	divisor=divisor+2
	soma=soma+((-1)**contador)*(4/divisor)
print(round(soma, 8))
	
-- EXECUTION TIME:
0.173086
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
